# archi_logicielle

./: .pdm-python  PKG-INFO  README.md  data.csv  data.db  dev.env  pyproject.toml  tutorial.db
src/archilog/: __init__.py  models.py  services.py  views.py
src/archilog/static/: style.css
src/archilog/templates/: create.html  delete.html  get.html  get_all.html  home.html  import_export_csv.html  update.html
src/archilog/views/: __init__.py  api.py  cli.py  web.py
src/archilog/views/static/: style.css
src/archilog/views/templates/: create.html  delete.html  get.html  get_all.html  home.html  import_export_csv.html  update.html
